# plc-modules

./: .gitignore  .~lock.Расчет.ods#  .~lock.Расчет_v2.ods#  NewOrder.txt  New_Library.kicad_sym  NextPCB.kicad_sym  PlcModules.bak  PlcModules.kicad_sym  README.md  TODO  TODO.md  release  Расчет.ods  Расчет_v2.ods
firmware/: Cargo.toml  sdkconfig.defaults
firmware/.zed/: settings.json
firmware/example_linux/messages/: Cargo.toml
firmware/example_linux/rpi/src/: main.rs
firmware/plc-example/messages/src/: lib.rs
firmware/plc-example/rpi/: Cargo.toml
firmware/plc-example/rpi/src/: config_livecounter.rs  main.rs
firmware/pm_cnv/: Cargo.toml  rust_targets.txt
firmware/pm_cnv/.cargo/: config.toml
firmware/pm_cnv/.zed/: settings.json
firmware/pm_cnv/examples/PMCMV_INA226x4_v000001/: README.md  cfg_i2c_master.rs  cfg_inject_periodic.rs  cfg_logger.rs  config_i2c_master.rs  config_logger.rs  main.rs  messages.rs  msg.rs
firmware/pm_cnv/examples/PMCMV_PWMx16_v000001/: README.md  cfg_i2c_master.rs  cfg_inject_periodic.rs  cfg_logger.rs  config_i2c_master.rs  config_logger.rs  main.rs  messages.rs  msg.rs
firmware/pm_cnv/examples/PMCNV-RQx8-v000009/: README.md  cfg_i2c_master.rs  cfg_inject_periodic.rs  config_i2c_master.rs  msg.rs
firmware/pm_cnv/examples/di16-v000007/: config_spi_master.rs  main.rs
firmware/pm_cnv/examples/dq16src-v000003-i2c/: README.md  cfg_i2c_master.rs  cfg_inject_periodic.rs  config_i2c_master.rs  config_inject_periodic.rs  main.rs  messages.rs
firmware/pm_cnv/examples/pm_cnv__di16_sink__v0_0_6__linux/: config_spi_master.rs  main.rs
firmware/pm_cnv/examples/pmcnv-ai4w-v000002/: cfg_inject_periodic.rs  cfg_spi_master.rs  config_inject_periodic.rs  config_spi_master.rs  main.rs  msg.rs
firmware/pm_cnv/examples/pmcnv-di16sink-v000006/: config_logger.rs  main.rs  messages.rs
firmware/pm_cnv/examples/pmcnv-dq16src-v000002/: config_logger.rs  config_spi_master.rs  main.rs
firmware/pm_cnv/examples/rq8-v000006-i2c/: README.md  config_i2c_master.rs  messages.rs
firmware/pm_cnv/examples/rq8-v000009-i2c/: README.md  config_i2c_master.rs  config_inject_periodic.rs  main.rs
firmware/pm_cnv/logs/: log.2025-08-27-05
firmware/pm_cnv/src/: PM_CNV__DI16_sink__v0_0_4.rs  PM_CNV__RQ8__v0_0_5.rs  lib.rs  pm_cnv__ai4_w__v0_0_1.rs  pm_cnv__di16_sink__v0_0_4.rs  pm_cnv__di16_sink__v0_0_6.rs  pm_cnv__keyboard__v0_0_2.rs  pm_cnv__rq8__v0_0_5.rs  pmcnv_di16sink_v000006.rs  pmcnv_dq16src_v000002.rs
firmware/pm_cnv/src/PMCMV_INA226x4_v000001/: buffer.rs  device.rs  mod.rs  output_data.rs  request_kind.rs
firmware/pm_cnv/src/PMCMV_PWMx16_v000001/: buffer.rs  device.rs  mod.rs  request_kind.rs
firmware/pm_cnv/src/PMCNV_AIWx4_v000002/: buffer.rs  device.rs  mod.rs  request_kind.rs
firmware/pm_cnv/src/PMCNV_DIx16_v000010/: buffer.rs  device.rs  mod.rs  output_data.rs
firmware/pm_cnv/src/PMCNV_RQx8_v000009/: buffer.rs  device.rs  mod.rs  request_kind.rs
firmware/pm_cnv/src/PMHMI_Bx12Lx8_v000001/: buffer.rs  device.rs  mod.rs  request_kind.rs
firmware/pm_cnv/src/PMIFC_I2Cx8_v000002/: mod.rs
firmware/pm_cnv/src/chips/: ad7190.rs  ad7193.rs  ina226.rs  mcp23017.rs  mcp23s17.rs  mcp23s17_i2c.rs  mod.rs  pca9685.rs
firmware/pm_cnv/src/di16_v000007/: buffer.rs  device.rs
firmware/pm_cnv/src/di16_v000010/: buffer.rs  device.rs  request_kind.rs
firmware/pm_cnv/src/dq16src_v000003/: buffer.rs  device.rs  request_kind.rs
firmware/pm_firmware/: Cargo.toml  sdkconfig.defaults
firmware/pm_firmware/.cargo/: config.toml
firmware/pm_firmware/release/: PM_DI16_DC24sink__v0_0_2  PM_RQ8__v0_0_3  PM_RQ8__v0_0_4
firmware/pm_firmware/src/: define_address.rs  error.rs  lib.rs  service.rs
firmware/pm_firmware_lib/: Cargo.toml
firmware/pm_firmware_lib/src/: lib.rs  pm_di16_dc24sink_v0_0_2.rs  pm_rq8_v0_0_3.rs
firmware/pm_firmware_linux_uart_master/: Cargo.toml
firmware/pm_firmware_linux_uart_master/examples/: pm_rq8_v0_0_4.rs
firmware/pm_firmware_linux_uart_master/src/: lib.rs
firmware/pm_firmware_spi_devices/: Cargo.toml
firmware/pm_firmware_uart_shared/: Cargo.toml
firmware/pm_firmware_uart_shared/src/: pm_rq8_v0_0_4.rs
firmware/pm_mod_firmware/: Cargo.toml  sdkconfig.defaults
firmware/pm_mod_firmware/.cargo/: config.toml
firmware/pm_mod_firmware/release/: PM_MOD__AI4_W__v0_0_1  PM_MOD__DI16_sink__v0_0_4  PM_MOD__Keyboard__v0_0_2  PM_MOD__RQ16__v0_0_5  PM_MOD__RQ8__v0_0_5
firmware/pm_mod_firmware/src/: define_address.rs  lib.rs  settings.rs
firmware/pm_mod_uart_master/: Cargo.toml
firmware/pm_mod_uart_master/src/: pm_rq8_v0_0_4.rs
firmware/pm_mod_uart_shared/: Cargo.toml
firmware/pm_mod_uart_shared/src/: lib.rs  settings.rs
firmware/pm_tester/: Cargo.toml  README.md  S99_pm_tester.sh  build.rs
firmware/pm_tester/.cargo/: config.toml
firmware/pm_tester/.zed/: settings.json
firmware/pm_tester/src/: main.rs  modules.rs
firmware/pm_uart_integration/: .gitignore  Cargo.toml
firmware/pm_uart_integration/src/: lib.rs
firmware/release/: PM_RQ8__v0_0_3
firmware/scripts/: compile-all.nu
firmware/scripts/PM-DI16-DC24sink_v0.0.2/: compile-upload.nu  compile.nu  upload.nu
firmware/scripts/PM-RQ8_v0.0.3/: compile-upload.nu  compile.nu  upload.nu
firmware/scripts/PM-RQ8_v0.0.4/: compile-upload.nu  compile.nu  upload.nu
firmware/scripts/PM_MOD__AI4_W__v0_0_1/: compile-upload.nu  compile.nu  upload.nu
firmware/scripts/PM_MOD__DI16_sink__v0_0_4/: compile-upload.nu  compile.nu  upload.nu
firmware/scripts/PM_MOD__Keyboard__v0_0_2/: compile-upload.nu  compile.nu  upload.nu
firmware/scripts/PM_MOD__RQ16__v0_0_5/: compile-upload.nu  compile.nu  upload.nu
firmware/scripts/PM_MOD__RQ8__v0_0_5/: compile-upload.nu  compile.nu  upload.nu
firmware/src/: lib.rs  main.rs  postcard_serde.rs
firmware/src/i2c_slave/: wait_first_byte.rs  write_i2c_buffer.rs
firmware/src/plc_modules/: mod.rs
firmware/src/spi_devices/: mcp23s17.rs
inventree_bom/: BOM.csv  Cargo.toml  README.md
inventree_bom/src/: error.rs  main.rs  read_bom_file.rs  req_part_pk.rs  req_sku.rs  write_lcsc_file.rs  write_price_files.rs
(+2688 files in other folders)
