[package]
name = "inventree_bom"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["derive"] }
csv = { version = "1.4.0" }
reqwest = { version = "0.13.4", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23" }
