[package]
name = "pm_cnv"
version = "0.0.1"
edition = "2021"

[dependencies]
rsiot = { path = "../../../rsiot", features = ["executor"] }
rsiot-physical-quantities = { path = "../../../rsiot-physical-quantities" }
tokio = { version = "*", features = ["sync"] }
async-trait = "*"
serde = { version = "*", features = ["derive"] }
tracing = "*"
strum = { version = "*", features = ["derive"] }
bit-vec = "0.8"
bitvec = "1.0.1"


[dev-dependencies]
rsiot = { path = "../../../rsiot", features = [
    "executor",
    "log_console",
    "cmp_linux_i2c_master",
    "cmp_linux_spi_master",
] }

tokio = { version = "*", features = ["rt-multi-thread"] }


[features]
default = []
single-thread = ["rsiot/single-thread"]
