[package]
name = "pm_mod_firmware"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { version = "*" }
esp-idf-svc = { version = "*" }
tokio = { version = "*", features = ["rt", "macros", "time"] }
serde = { version = "*", features = ["derive"] }
thiserror = { version = "*" }
tracing = { version = "*" }
tracing-subscriber = { version = "*" }

rsiot = { path = "../../../rsiot", features = ["cmp_esp", "logging"] }
rsiot-devices = { path = "../../../rsiot-devices" }

pm_cnv = { path = "../pm_cnv" }
pm_uart_integration = { path = "../pm_uart_integration" }


[build-dependencies]
embuild = { version = "*", features = ["espidf"] }
