[package]
name = "pm_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
slint = { version = "1.16.1", default-features = false, features = [
    "compat-1-2",
    "backend-linuxkms-noseat",
    "renderer-skia",
] }
rsiot = { path = "/mnt/data/projects/rsiot", features = [
    "log_console",
    "cmp_filesystem",
    "cmp_linux_gpio",
    "cmp_linux_i2c_master",
    "cmp_os_process",
    "cmp_slint",
    "serde_toml",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = { version = "1.1.2" }
tracing = { version = "0.1.44" }

pm_cnv = { path = "../pm_cnv" }

[build-dependencies]
slint-build = "1.16.1"

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
dockerfile = "./Dockerfile.armv7-unknown-linux-gnueabihf"

[profile.release]
lto = "fat"
opt-level = "z"
